# vou-de-taxi

./: .gitattributes  .gitignore  Dockerfile.spark-jupyter  LICENSE  README.md  docker-compose.yml  pyproject.toml
apps/: wordcount.py
apps/notebooks/: nyc_taxi_01_read.ipynb
docs/: ambiente.md  ambiente.snapshot.windows.json  ambiente.snapshot.wsl.txt
scripts/: snapshot.wsl.sh  status.ps1
src/vou_de_taxi/pipeline/: cli.py
