[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vou-de-taxi"
version = "0.1.0"
description = "PySpark pipeline for NYC TLC trip records"
requires-python = ">=3.11"
dependencies = [
  "pyspark==3.5.0",
]

[project.scripts]
vou-de-taxi = "vou_de_taxi.pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
